short description of what you changed

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -108,4 +108,60 @@ GamesLibrary — це легкий каталог для відстеження 
     <string name="about_igdb_attribution">
     Обкладинки ігор отримані з офіційного API IGDB.
 </string>
+    <string name="section_device_env">Пристрій / середовище</string>
+    <string name="section_app_game">Застосунок / гра</string>
+    <string name="section_issue_details">Деталі проблеми</string>
+    <string name="section_emulator_settings">Налаштування емулятора</string>
+    <string name="section_result_metrics">Метрики результату</string>
+    <string name="section_media">Медіа</string>
+    <string name="label_android_version">Версія Android</string>
+    <string name="label_device_model">Модель пристрою</string>
+    <string name="label_gpu_model">Модель GPU</string>
+    <string name="label_ram">Оперативна памʼять (RAM)</string>
+    <string name="label_wrapper">Обгортка Vulkan / OpenGL / D3D</string>
+    <string name="label_performance_mode">Режим продуктивності</string>
+    <string name="label_game_version_build">Версія гри / збірка</string>
+    <string name="label_issue_type">Тип проблеми</string>
+    <string name="label_reproducibility">Відтворюваність</string>
+    <string name="label_workaround">Обхідний шлях (необовʼязково)</string>
+    <string name="label_emulator_build_type">Тип збірки емулятора</string>
+    <string name="label_accuracy_level">Рівень точності</string>
+    <string name="label_resolution_scale">Масштаб роздільної здатності (1x / 2x / 0.75x)</string>
+    <string name="label_async_shader">Асинхронні шейдери / кеш</string>
+    <string name="label_frame_skip">Пропуск кадрів (0 / 1 / 2)</string>
+    <string name="label_media_link">Посилання на скріншот / відео (необовʼязково)</string>
+    <string name="issue_type_crash">Збій (краш)</string>
+    <string name="issue_type_black_screen">Чорний екран</string>
+    <string name="issue_type_softlock">Софтлок (зависання прогресу)</string>
+    <string name="issue_type_graphics">Графічні артефакти</string>
+    <string name="issue_type_audio">Проблеми зі звуком</string>
+    <string name="issue_type_controls">Керування не працює</string>
+    <string name="issue_type_performance">Низька продуктивність</string>
+    <string name="repro_always">Завжди</string>
+    <string name="repro_often">Часто</string>
+    <string name="repro_rare">Рідко</string>
+    <string name="repro_once">Один раз</string>
+    <string name="emu_build_stable">Стабільна</string>
+    <string name="emu_build_canary">Canary</string>
+    <string name="emu_build_git">Git-хеш</string>
+    <string name="test_history_android_version">Android: %1$s</string>
+    <string name="test_history_gpu_model">GPU: %1$s</string>
+    <string name="test_history_ram">RAM: %1$s</string>
+    <string name="test_history_wrapper">Обгортка: %1$s</string>
+    <string name="test_history_perf_mode">Режим продуктивності: %1$s</string>
+    <string name="test_history_game_version_build">Збірка гри: %1$s</string>
+    <string name="test_history_issue_type">Тип проблеми: %1$s</string>
+    <string name="test_history_repro">Відтворюваність: %1$s</string>
+    <string name="test_history_workaround">Обхідний шлях: %1$s</string>
+    <string name="test_history_emulator_build">Збірка емулятора: %1$s</string>
+    <string name="test_history_accuracy">Точність: %1$s</string>
+    <string name="test_history_resolution_scale">Масштаб роздільної здатності: %1$s</string>
+    <string name="test_history_async_shader">Асинхронні шейдери: %1$s</string>
+    <string name="test_history_frame_skip">Пропуск кадрів: %1$s</string>
+    <string name="test_history_media">Медіа: %1$s</string>
+    <string name="value_on">Увімкнено</string>
+    <string name="value_off">Вимкнено</string>
+    <string name="option_other">Інше…</string>
+    <string name="option_custom">Користувацьке</string>
+
 </resources>
