--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,5 +108,60 @@ You can also submit anonymous test results to keep your own testing history and 
     <string name="about_igdb_attribution">
     Cover images are provided by the official IGDB API.
 </string>
+    <string name="section_device_env">Device / Environment</string>
+    <string name="section_app_game">App / Game</string>
+    <string name="section_issue_details">Issue details</string>
+    <string name="section_emulator_settings">Emulator settings</string>
+    <string name="section_result_metrics">Result metrics</string>
+    <string name="section_media">Media</string>
+    <string name="label_android_version">Android version</string>
+    <string name="label_device_model">Device model</string>
+    <string name="label_gpu_model">GPU model</string>
+    <string name="label_ram">RAM</string>
+    <string name="label_wrapper">Vulkan / OpenGL / D3D wrapper</string>
+    <string name="label_performance_mode">Performance mode</string>
+    <string name="label_game_version_build">Game version / build</string>
+    <string name="label_issue_type">Issue type</string>
+    <string name="label_reproducibility">Reproducibility</string>
+    <string name="label_workaround">Workaround (optional)</string>
+    <string name="label_emulator_build_type">Emulator build type</string>
+    <string name="label_accuracy_level">Accuracy level</string>
+    <string name="label_resolution_scale">Resolution scale (1x / 2x / 0.75x)</string>
+    <string name="label_async_shader">Async shader / Cache</string>
+    <string name="label_frame_skip">Frame skip (0 / 1 / 2)</string>
+    <string name="label_media_link">Screenshot / video link (optional)</string>
+    <string name="issue_type_crash">Crash</string>
+    <string name="issue_type_black_screen">Black screen</string>
+    <string name="issue_type_softlock">Softlock</string>
+    <string name="issue_type_graphics">Graphics glitches</string>
+    <string name="issue_type_audio">Audio issues</string>
+    <string name="issue_type_controls">Controls not working</string>
+    <string name="issue_type_performance">Slow performance</string>
+    <string name="repro_always">Always</string>
+    <string name="repro_often">Often</string>
+    <string name="repro_rare">Rare</string>
+    <string name="repro_once">Once</string>
+    <string name="emu_build_stable">Stable</string>
+    <string name="emu_build_canary">Canary</string>
+    <string name="emu_build_git">Git hash</string>
+    <string name="test_history_android_version">Android: %1$s</string>
+    <string name="test_history_gpu_model">GPU: %1$s</string>
+    <string name="test_history_ram">RAM: %1$s</string>
+    <string name="test_history_wrapper">Wrapper: %1$s</string>
+    <string name="test_history_perf_mode">Performance mode: %1$s</string>
+    <string name="test_history_game_version_build">Game build: %1$s</string>
+    <string name="test_history_issue_type">Issue type: %1$s</string>
+    <string name="test_history_repro">Reproducibility: %1$s</string>
+    <string name="test_history_workaround">Workaround: %1$s</string>
+    <string name="test_history_emulator_build">Emulator build: %1$s</string>
+    <string name="test_history_accuracy">Accuracy: %1$s</string>
+    <string name="test_history_resolution_scale">Resolution scale: %1$s</string>
+    <string name="test_history_async_shader">Async shader: %1$s</string>
+    <string name="test_history_frame_skip">Frame skip: %1$s</string>
+    <string name="test_history_media">Media: %1$s</string>
+    <string name="value_on">On</string>
+    <string name="value_off">Off</string>
+    <string name="option_other">Other…</string>
+    <string name="option_custom">Custom</string>
 
 </resources>
