short description of what you changed

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -5,7 +5,7 @@
     <string name="home_button_ps3">Ігри PS3</string>
     <string name="home_button_pc">Ігри ПК</string>
     <string name="home_button_switch">Ігри Nintendo Switch</string>
-    <string name="home_hero_title">Ласкаво просимо!</string>
+    <string name="home_hero_title">Погнали!</string>
     <string name="home_hero_body">Тестуйте ігри, перевіряйте сумісність і діліться анонімними результатами.</string>
     <string name="cd_open_about">Про застосунок</string>
     <string name="about_title">Про застосунок</string>
@@ -163,5 +163,61 @@ GamesLibrary — це легкий каталог для відстеження 
     <string name="value_off">Вимкнено</string>
     <string name="option_other">Інше…</string>
     <string name="option_custom">Користувацьке</string>
+    <string name="details_title">Деталі гри</string>
+    <string name="details_not_found">Гру не знайдено.</string>
+    <string name="details_section_latest">Останній тест</string>
+    <string name="details_section_overview">Огляд</string>
+    <string name="details_no_tests">Для цієї гри ще немає тестів.</string>
+    <string name="details_unknown">Невідомо</string>
+    <string name="details_show_more">Показати більше</string>
+    <string name="details_show_less">Показати менше</string>
+    <string name="details_media_title">Медіа (скриншот / відео)</string>
+    <string name="cd_toggle_favorite">Додати/прибрати з обраного</string>
+    <string name="cd_open_details">Відкрити деталі гри</string>
+    <string name="main_hero_title">Ласкаво просимо!</string>
+    <string name="main_hero_body">Обери платформу або відкрий останні результати тестів.</string>
+    <string name="main_button_platforms">Платформи</string>
+    <string name="main_button_platforms_sub">PS3 • PC • Switch</string>
+    <string name="main_button_last_tests">Останні тести</string>
+    <string name="main_last_tests_empty">Ще немає збережених тестів</string>
+    <string name="home_platforms_title">Платформи</string>
+    <string name="cd_back">Назад</string>
+    <string name="test_history_title">Історія тестів</string>
+    <string name="test_history_android_with_version">Android %1$s</string>
+    <string name="test_history_wrapper_perf">%1$s • %2$s</string>
+    <string name="value_dash">—</string>
+    <string name="test_history_detail_title">Деталі тесту</string>
+    <string name="error_test_not_found">Тест не знайдено</string>
+    <string name="error_game_not_found">Гру не знайдено</string>
+    <string name="test_history_section_app_game">App / Game</string>
+    <string name="test_history_label_app">App</string>
+    <string name="test_history_label_app_version">Версія App</string>
+    <string name="test_history_label_resolution">Resolution</string>
+    <string name="test_history_value_resolution">%1$s×%2$s</string>
+    <string name="test_history_label_fps">FPS</string>
+    <string name="test_history_value_fps">%1$s–%2$s</string>
+    <string name="test_comment_hint">Додати коментар…</string>
+    <string name="cd_send_comment">Надіслати коментар</string>
+    <string name="test_comment_saved">Коментар збережено</string>
+    <string name="test_comment_saved_offline">Коментар збережено локально (офлайн)</string>
+    <string name="test_comments_title">Коментарі</string>
+    <string name="test_comments_empty">Поки немає коментарів</string>
+    <string name="media_type_photo">Фото</string>
+    <string name="media_type_video">Відео / медіа</string>
+    <string name="media_type_youtube">YouTube</string>
+    <string name="details_section_videos">Відео</string>
+    <string name="open_video">Відкрити відео</string>
+    <string name="tests_badge_label">Тестів: %1$d</string>
+    <string name="onboard_skip">Пропустити</string>
+    <string name="onboard_next">Далі</string>
+    <string name="onboard_start">Почати</string>
+    <string name="onboard_title_1">Створіть свою бібліотеку</string>
+    <string name="onboard_body_1">Зберігайте ігри для PS3, ПК і Switch в одному охайному списку.</string>
+    <string name="onboard_title_2">Налаштуйте під пристрій</string>
+    <string name="onboard_body_2">Зберігайте найкращі налаштування для свого Android-телефона або планшета.</string>
+    <string name="onboard_title_3">Відстежуйте продуктивність</string>
+    <string name="onboard_body_3">Записуйте FPS, глюки та нотатки для кожної тестової сесії.</string>
+    <string name="onboard_title_4">Грайте й діліться результатами</string>
+    <string name="onboard_body_4">Історія зберігається на пристрої, а звітами можна ділитися будь-коли.</string>
 
 </resources>
