--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="home_button_ps3">PS3 games</string>
     <string name="home_button_pc">PC games</string>
     <string name="home_button_switch">Nintendo Switch games</string>
-    <string name="home_hero_title">Welcome!</string>
+    <string name="home_hero_title">Let’s go!</string>
     <string name="home_hero_body">Test games, check compatibility, and share anonymous results.</string>
     <string name="cd_open_about">About app</string>
     <string name="about_title">About</string>
@@ -163,5 +163,61 @@ You can also submit anonymous test results to keep your own testing history and 
     <string name="value_off">Off</string>
     <string name="option_other">Other…</string>
     <string name="option_custom">Custom</string>
+    <string name="details_title">Game details</string>
+    <string name="details_not_found">Game not found.</string>
+    <string name="details_section_latest">Latest test</string>
+    <string name="details_section_overview">Overview</string>
+    <string name="details_no_tests">No tests yet for this game.</string>
+    <string name="details_unknown">Unknown</string>
+    <string name="details_show_more">Show more</string>
+    <string name="details_show_less">Show less</string>
+    <string name="details_media_title">Media (screenshot / video)</string>
+    <string name="cd_toggle_favorite">Toggle favorite</string>
+    <string name="cd_open_details">Open game details</string>
+    <string name="main_hero_title">Welcome!</string>
+    <string name="main_hero_body">Choose a platform or open the latest test results.</string>
+    <string name="main_button_platforms">Platforms</string>
+    <string name="main_button_platforms_sub">PS3 • PC • Switch</string>
+    <string name="main_button_last_tests">Latest tests</string>
+    <string name="main_last_tests_empty">No saved tests yet</string>
+    <string name="home_platforms_title">Platforms</string>
+    <string name="cd_back">Back</string>
+    <string name="test_history_title">Test History</string>
+    <string name="test_history_android_with_version">Android %1$s</string>
+    <string name="test_history_wrapper_perf">%1$s • %2$s</string>
+    <string name="value_dash">—</string>
+    <string name="test_history_detail_title">Test Details</string>
+    <string name="error_test_not_found">Test not found</string>
+    <string name="error_game_not_found">Game not found</string>
+    <string name="test_history_section_app_game">App / Game</string>
+    <string name="test_history_label_app">App</string>
+    <string name="test_history_label_app_version">App version</string>
+    <string name="test_history_label_resolution">Resolution</string>
+    <string name="test_history_value_resolution">%1$s×%2$s</string>
+    <string name="test_history_label_fps">FPS</string>
+    <string name="test_history_value_fps">%1$s–%2$s</string>
+    <string name="test_comment_hint">Add a comment…</string>
+    <string name="cd_send_comment">Send comment</string>
+    <string name="test_comment_saved">Comment saved</string>
+    <string name="test_comment_saved_offline">Comment saved locally (offline)</string>
+    <string name="test_comments_title">Comments</string>
+    <string name="test_comments_empty">No comments yet</string>
+    <string name="media_type_photo">Photo</string>
+    <string name="media_type_video">Video / media</string>
+    <string name="media_type_youtube">YouTube</string>
+    <string name="details_section_videos">Videos</string>
+    <string name="open_video">Open video</string>
+    <string name="tests_badge_label">Tests: %1$d</string>
+    <string name="onboard_skip">Skip</string>
+    <string name="onboard_next">Next</string>
+    <string name="onboard_start">Start</string>
+    <string name="onboard_title_1">Build your library</string>
+    <string name="onboard_body_1">Keep PS3, PC and Switch games organized in one clean list.</string>
+    <string name="onboard_title_2">Tune per device</string>
+    <string name="onboard_body_2">Save the best settings for your Android phone or tablet.</string>
+    <string name="onboard_title_3">Track performance</string>
+    <string name="onboard_body_3">Record FPS, glitches and notes for every test session.</string>
+    <string name="onboard_title_4">Play and share results</string>
+    <string name="onboard_body_4">Your history stays on device, and you can share reports anytime.</string>
 
 </resources>
