--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -219,5 +219,15 @@ You can also submit anonymous test results to keep your own testing history and 
     <string name="onboard_body_3">Record FPS, glitches and notes for every test session.</string>
     <string name="onboard_title_4">Play and share results</string>
     <string name="onboard_body_4">Your history stays on device, and you can share reports anytime.</string>
+    <string name="edit_status_title">Edit status</string>
+    <string name="edit_status_game_not_found">Game not found</string>
+    <string name="action_close">Close</string>
+    <string name="search_in_db_button">Search in DB</string>
+    <string name="search_device_title">Search device in DB</string>
+    <string name="search_device_input_hint">Type model name (min 2 chars)</string>
+    <string name="search_device_start_typing">Start typing to see results…</string>
+    <string name="search_device_no_matches">No matches. You can close and type model manually.</string>
+    <string name="search_device_cpu_prefix">CPU: %1$s</string>
+    <string name="search_device_ram_prefix">RAM: %1$s</string>
 
 </resources>
