short description of what you changed

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -229,5 +229,48 @@ GamesLibrary — це легкий каталог для відстеження 
     <string name="search_device_no_matches">Збігів не знайдено. Ви можете закрити й ввести модель вручну.</string>
     <string name="search_device_cpu_prefix">CPU: %1$s</string>
     <string name="search_device_ram_prefix">RAM: %1$s</string>
+    <string name="profile_title">Профіль</string>
+    <string name="sign_in_google">Увійти через Google</string>
+    <string name="sign_out">Вийти</string>
+    <string name="my_tests">Мої тести</string>
+    <string name="my_comments">Мої коментарі</string>
+    <string name="my_favorites">Мої улюблені</string>
+    <string name="need_login">Щоб бачити цю сторінку — увійди в акаунт</string>
+    <string name="need_login_favorites">Улюблені синхронізуються лише через акаунт</string>
+    <string name="profile_guest_hint">Ти зараз як гість. Авторизація дає синхронізацію улюблених та редагування своїх тестів/коментів.</string>
+    <string name="auth_success">Успішний вхід</string>
+    <string name="auth_failed">Не вдалося увійти</string>
+    <string name="auth_signed_out">Вийшли з акаунта</string>
+    <string name="test_updated">Тест оновлено</string>
+    <string name="comment_updated">Коментар оновлено</string>
+    <string name="edit">Редагувати</string>
+    <string name="edit_comment_title">Редагувати коментар</string>
+    <string name="action_edit_test">Редагувати тест</string>
+    <string name="edit_test_title">Редагування тесту</string>
+    <string name="edit_test_note_hint">Опис проблеми / нотатка</string>
+    <string name="my_comments_empty">У вас ще немає коментарів</string>
+    <string name="my_favorites_empty">У вас ще немає улюблених ігор</string>
+    <string name="my_tests_empty">У вас ще немає залишених тестів</string>
+    <string name="main_button_profile">Профіль</string>
+    <string name="main_button_profile_sub">Авторизація, мої тести, коментарі, улюблені</string>
+    <string name="profile_guest_title">Увійди в акаунт</string>
+    <string name="profile_guest_body">Щоб бачити свої тести, коментарі та обране</string>
+    <string name="profile_signed_in_as">Ви увійшли як</string>
+    <string name="profile_menu_tests_sub">Список твоїх тестів</string>
+    <string name="profile_menu_comments_sub">Всі твої коментарі</string>
+    <string name="profile_menu_favorites_sub">Улюблені ігри</string>
+    <string name="favorite_badge">У вибраному</string>
+    <string name="label_status">Статус</string>
+    <string name="label_issue_note">Нотатка / опис проблеми</string>
+    <string name="main_button_last_tests_sub_20">Останні 20 тестів</string>
+    <string name="sign_out_confirm_title">Вийти з акаунта?</string>
+    <string name="sign_out_confirm_body">Ти точно хочеш вийти? Деякі функції будуть недоступні.</string>
+    <string name="sign_out_confirm_yes">Вийти</string>
+    <string name="sign_out_confirm_no">Скасувати</string>
+    <string name="profile_stats_tests">Мої тести</string>
+    <string name="profile_stats_comments">Мої коментарі</string>
+    <string name="profile_stats_favorites">Улюблені</string>
+    <string name="profile_stats_title">Статистика</string>
+
 
 </resources>
